progs/tests/faulty_list_index_assign.sy
Q :: blob {
    a : [int]
}

start :: fn {
    a :: [1]
    a[0] = "fail"

    q :: Q { a: [4] }
    q.a[0] = "fail"
}

// error: #TypeMismatch(Type::Int, Type::String)
// error: #TypeMismatch(Type::Int, Type::String)
